app/assets/stylesheets/bootstrap_and_overrides.css.less
@import "twitter/bootstrap/bootstrap";

// Set the correct sprite paths
@iconSpritePath: image-url("twitter/bootstrap/glyphicons-halflings.png");
@iconWhiteSpritePath: image-url("twitter/bootstrap/glyphicons-halflings-white.png");

// Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
@fontAwesomeEotPath: font-url("fontawesome-webfont.eot");
@fontAwesomeEotPath_iefix: font-url("fontawesome-webfont.eot?#iefix");
@fontAwesomeWoffPath: font-url("fontawesome-webfont.woff");
@fontAwesomeTtfPath: font-url("fontawesome-webfont.ttf");
@fontAwesomeSvgPath: font-url("fontawesome-webfont.svg#fontawesomeregular");

// Font Awesome
@import "fontawesome/font-awesome";

// Glyphicons
//@import "twitter/bootstrap/glyphicons.less";

// Your custom LESS stylesheets goes here
//
// Since bootstrap was imported above you have access to its mixins which
// you may use and inherit here
//
// If you'd like to override bootstrap's own variables, you can do so here as well
// See http://twitter.github.com/bootstrap/customize.html#variables for their names and documentation
//
// Example:
// @link-color: #ff0000;
@link-color: #4A7FF7;

.navbar-default{
  background-color: #4A7FF7;
  border: none;
  //border-bottom: 4px #4d4d4d solid;
  -webkit-box-shadow: 0px 4px 2px #4d4d4d;
  -moz-box-shadow: 0px 4px 2px #4d4d4d;
  box-shadow: 0px 4px 2px #4d4d4d;
}

.navbar{
  border-radius: 0px;
}

.navbar-default .navbar-nav > li > a{
  color: #ffffff;
  font-size: 16px;
}

.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus{
  color: lightgray;
}

.navbar-default .navbar-brand{
  color: #ffffff;
}

.navbar-brand{
  padding: 0;
  margin-top: -2px;
}

.navbar-default a{
  color: #000;
}

.navbar-default .active{
  -webkit-box-shadow: 0px 5px 3px #FE2E2E;
  -moz-box-shadow: 0px 5px 3px #FE2E2E;
  box-shadow: 0px 5px 3px #FE2E2E;
}

